--- a/templates/puppet_proxy_puppetrun.yml.erb
+++ b/templates/puppet_proxy_puppetrun.yml.erb
@@ -3,14 +3,15 @@
 # User for execution of puppetrun commands
 #
 # sudo permission needs to be added to ensure
-# smart-proxy can execute 'sudo' command
-#
+# smart-proxy can execute 'sudo' command.
+# Make these changes in /etc/sudoers.d/foreman-proxy
+# 
+# For Puppet 3
 # Defaults:foreman-proxy !requiretty
-# foreman-proxy ALL=(peadmin) NOPASSWD: /opt/puppet/bin/puppet *',
-#
-# or
-#
+# foreman-proxy ALL=(root) NOPASSWD: /usr/bin/puppet *
+# 
+# For Puppet 4
 # Defaults:foreman-proxy !requiretty
-# foreman-proxy ALL=(peadmin) NOPASSWD: /opt/puppet/bin/puppetrun *',
+# foreman-proxy ALL=(root) NOPASSWD: /opt/puppet/bin/puppetrun *
 #
 :user: <%= scope.lookupvar("foreman_proxy::puppet_user") %>
